[tool.poetry]
name = "aio-nano"
version = "0.1.6"
description = "An asynchronous nano currency library"
authors = ["Teslim Olunlade <tolunlade@outlook.com>"]
license = "MIT"
homepage = "https://github.com/ogtega/aio-nano"
repository = "https://github.com/ogtega/aio-nano"
keywords = ["nano", "currency", "async", "crypto", "python"]
include = [
  "LICENSE"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
pydantic = "^1.9.1"
websockets = "^10.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.20.0"
black = "^22.6.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
